feat: simplified further the app - removed vuetify, MDI - actually uses Nunito font - shows a custom title - chart takes the whole space available - simplified again the schema - removed leftovers

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="vocabulary-require" content="http://www.w3.org/2003/01/geo/wgs84_pos#lat_long">
     <title lang="fr">data-fair-pie-chart</title>
     <title lang="en">data-fair-pie-chart</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:300,400,500,700,400italic|Material+Icons" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:300,400,500,700,400italic" />
     <script type="text/javascript">window.APPLICATION=%APPLICATION%;</script>
   </head>
   <body>
